cmake_minimum_required(VERSION 3.15)
project(78DataStructure)

set(CMAKE_CXX_STANDARD 14)

add_executable (78DataStructure 01Test.cpp)
add_executable(02SiZiLianZhu 02SiZiLianZhu.cpp)
add_executable(03SchoolGuide 03SchoolGuide.cpp)
add_executable(04StudentInformationManage 04StudentInformationManage.cpp)
add_executable(05BinaryConversion 05BinaryConversion.cpp)
add_executable(06ParenthesisMatching 06ParenthesisMatching.cpp)
add_executable(07BinarySortTreeOperation 07BinarySortTreeOperation.cpp)
add_executable(08InsertTest 08InsertTest.c)
add_executable(10Inserting-a-node-at-beginning 10Inserting-a-node-at-beginning.c)
add_executable(11Insert-a-node-at-any-given-position 11Insert-a-node-at-any-given-position.cpp)
add_executable(12One-OrderBinary-Tree-Becomes-Two-Order-Binary-Tree 12One-OrderBinary-Tree-Becomes-Two-Order-Binary-Tree.cpp)
add_executable(09CPP-JSON-Parser 09CPP-JSON-Parser.cpp)